# Speckle-and-AI

./: .gitignore  Makefile  README.md  authentication.py  commit_processor.py  config.py  db_handler.py  main.py  pyproject.toml  results.db  speckle_and AI.py  utilities.py
Sample code/: get_parameters.py
speckle_and_ai/: area_float_numbers.py  authentication.py  commit_processor.py  commit_utilities.py  config.py  db_handler.py  db_utilities.py  extract_check_area_discrepancy.py  get_parameters.py  menu_utilities.py  room_utilities.py  section_name_extractor.py  speckle_stream_selector.py  utilities.py  wall_utilities.py
tests/: test_area_float_numbers.py
